cert-manager-for-k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  namespace: nginx-ssl
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx
        ports:
        - name: web
          containerPort: 80
