cert-manager-for-k8s/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: nginx-ssl
  labels:
    app: nginx-app
spec:
  type: ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-app
