cert-manager-for-k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-ssl
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "cluster-issuer"
spec:
  rules:
  - host: "your host" # change this
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc 
            port:
              number: 80 
  tls:
  - hosts:
    - your host # change this
    secretName: nginx-tls-secret
